# PAOO

./: CMakeLists.txt
laborator2/: tutorial.cxx
tema/src/: CMakeLists.txt  main.cpp
tema/src/lib/: CMakeLists.txt  IPerson.hpp  adolescent.cpp  adolescent.hpp  adult.cpp  adult.hpp  child.cpp  child.hpp  person.cpp  person.h  person.hpp
tema3/src/: CMakeLists.txt  main.cpp
tema3/src/consumer/: CMakeLists.txt  consumer.cpp  consumer.hpp
tema3/src/producer/: CMakeLists.txt  producer.cpp  producer.hpp
tema3/src/product/: CMakeLists.txt  foodProduct.cpp  foodProduct.hpp  product.cpp  product.hpp
